--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 
+<script
+        src = "/socket.io/socket.io.js">
+</script>
+
 <script>
+    var socket = io()
 
     function addMessages(message){
         $("#messages").append(`<h4>${message.name}</h4><p>${message.message}</p>`)
