--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         $("#messages").append(`<h4>${message.name}</h4><p>${message.message}</p>`)
     }
 
+    socket.on('message', addMessages)
+
     function getMessages(message){
         $.get('http://localhost:3000/messages', (data) => {
             data.forEach(addMessages)
